fix(ui): fix overflow and hover status of modal

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -369,6 +369,7 @@ link {
 }
 
 ::-webkit-scrollbar {
+  padding: 1rem;
   width: 4px;
 }
 
