--- a/src/views/VotingResult/ListMembersDialog/ListMembersDialog.css
+++ b/src/views/VotingResult/ListMembersDialog/ListMembersDialog.css
@@ -42,6 +42,7 @@
   }
 
   & li {
+    cursor: pointer;
     display: inline-flex;
     flex-direction: row-reverse;
     justify-content: flex-end;
